EMSF-8 #corrected error in Datatype skillPost and aligned navbar items

--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -1,10 +1,13 @@
 .navbar {
-  margin: 0 10vw 0 10vw;
+  width: 70%;
   display: flex;
+  text-align: left;
+  margin: auto;
 }
-h3 {
-  margin-left: 10vw;
-  cursor: pointer;
+.navbar h3 {
+  display: flex;
+  margin-right: 10vw;
+  align-items: flex-end;
 }
 .active {
   color: var(--color-darkblue);
